src/app.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .modal-background {
    @apply bg-white dark:bg-gray-900 border-gray-200 dark:border-gray-600 shadow-2xl ring-1 ring-black dark:ring-gray-700 ring-opacity-5 dark:shadow-white/10;
  }

  .dialog-overlay {
    @apply fixed inset-0 bg-black bg-opacity-25 dark:bg-black dark:bg-opacity-70;
  }

  .submit-button {
    @apply bg-secondary text-white py-3 px-6 md:px-11 rounded shadow-button shadow-primary/30 hover:bg-primary/90;
  }

  .secondary-text {
    @apply text-gray-400 dark:text-gray-500;
  }
}

body {
  font-family: 'Inter', sans-serif;
}

